add sltiu instruction

--- a/npc/Makefile
+++ b/npc/Makefile
@@ -1,11 +1,11 @@
 TOPNAME := top
 INC_PATH := $(abspath ./include) $(abspath ./include/memory)
 
-#DIFF_REF_PATH = $(NEMU_HOME)
-#DIFF_REF = riscv64-nemu-interpreter-so
-#DIFF_REF_SO = $(DIFF_REF_PATH)/build/$(DIFF_REF)
-#REFFLAGS = GUEST_ISA=riscv64 SHARE=1 ENGINE=interpreter -lreadline
-#ARGS_DIFF = --diff=$(DIFF_REF_SO)
+DIFF_REF_PATH = $(NEMU_HOME)
+DIFF_REF = riscv32-nemu-interpreter-so
+DIFF_REF_SO = $(DIFF_REF_PATH)/build/$(DIFF_REF)
+REFFLAGS = GUEST_ISA=riscv32 SHARE=1 ENGINE=interpreter -lreadline
+ARGS_DIFF = --diff=$(DIFF_REF_SO)
 
 VERILATOR = verilator
 VERILATOR_CFLAGS += -MMD --build -cc  \
@@ -19,27 +19,27 @@ BIN = $(BUILD_DIR)/$(TOPNAME)
 default: $(BIN)
 
 $(shell mkdir -p $(BUILD_DIR))
-
+CXXFLAGS += $(shell llvm-config --cxxflags) -fPIE
+LIBS += $(shell llvm-config --libs)
 
 # project source
 VSRCS = $(shell find $(abspath ./vsrc) -name "*.v")
 CSRCS = $(shell find $(abspath ./csrc) -name "*.c" -or -name "*.cc" -or -name "*.cpp")
-
+CSRCS+=$(CXXSRC)
 # rules for verilator
 INCFLAGS = $(addprefix -I, $(INC_PATH))
-CFLAGS += $(INCFLAGS) -DTOP_NAME="\"V$(TOPNAME)\""
-LDFLAGS +=  -lreadline
+CFLAGS += $(INCFLAGS) -DTOP_NAME="\"V$(TOPNAME)\"" $(shell llvm-config --cxxflags) -fPIE
+LDFLAGS +=  -lreadline $(LIBS)
 
-override ARGS ?= --log=$(BUILD_DIR)/npc-log.txt
+override ARGS ?= --log=$(BUILD_DIR)/npc-log.txt $(ARGS_DIFF)
 
 IMG ?=
 NPC_EXEC := $(BIN) $(ARGS)  $(IMG)
 
 NEMU_FILE := $(shell find $(abspath ../nemu/src) -name "*.c")
-#$(DIFF_REF_SO): $(NEMU_FILE)
-#	@$(MAKE) -s -C $(DIFF_REF_PATH) $(REFFLAGS)
-
-$(BIN): $(VSRCS) $(CSRCS) 
+$(DIFF_REF_SO): $(NEMU_FILE)
+	@$(MAKE) -s -C $(DIFF_REF_PATH) $(REFFLAGS)
+$(BIN): $(VSRCS) $(CSRCS) $(DIFF_REF_SO)
 	@rm -rf $(OBJ_DIR)
 	@$(VERILATOR) $(VERILATOR_CFLAGS) \
 		--top-module $(TOPNAME) $(VSRCS) $(CSRCS) \
