--- a/npc/.gitignore
+++ b/npc/.gitignore
@@ -3,11 +3,20 @@
 !*/
 !Makefile
 !*.mk
+!*.scala
 !*.[cSh]
 !*.v
-!*.sv
-!*.cc
 !*.cpp
+!*.cc
 !.gitignore
+!.scalafmt.conf
+!build.sc
 !README.md
-builds/
+build/
+
+# mill
+out/
+.bsp/
+.idea/
+.idea_modules/
+test_run_dir/
