--- a/npc/Makefile
+++ b/npc/Makefile
@@ -1,62 +1,37 @@
-TOPNAME := top
-INC_PATH := $(abspath ./include) $(abspath ./include/memory)
-
-DIFF_REF_PATH = $(NEMU_HOME)
-DIFF_REF = riscv32-nemu-interpreter-so
-DIFF_REF_SO = $(DIFF_REF_PATH)/build/$(DIFF_REF)
-REFFLAGS = GUEST_ISA=riscv32 SHARE=1 ENGINE=interpreter -lreadline
-ARGS_DIFF = --diff=$(DIFF_REF_SO)
-
-VERILATOR = verilator
-VERILATOR_CFLAGS += -MMD --build -cc  \
-				-O3 --x-assign fast --x-initial fast --noassert \
-				--trace
-
 BUILD_DIR = ./build
-OBJ_DIR = $(BUILD_DIR)/obj_dir
-BIN = $(BUILD_DIR)/$(TOPNAME)
 
-default: $(BIN)
+PRJ = playground
 
-$(shell mkdir -p $(BUILD_DIR))
-CXXFLAGS += $(shell llvm-config --cxxflags) -fPIE
-LIBS += $(shell llvm-config --libs)
+test:
+	mill -i $(PRJ).test
 
-# project source
-VSRCS = $(shell find $(abspath ./vsrc) -name "*.v")
-CSRCS = $(shell find $(abspath ./csrc) -name "*.c" -or -name "*.cc" -or -name "*.cpp")
-CSRCS+=$(CXXSRC)
-# rules for verilator
-INCFLAGS = $(addprefix -I, $(INC_PATH))
-CFLAGS += $(INCFLAGS) -DTOP_NAME="\"V$(TOPNAME)\"" $(shell llvm-config --cxxflags) -fPIE
-LDFLAGS +=  -lreadline $(LIBS)
+verilog:
+	$(call git_commit, "generate verilog")
+	mkdir -p $(BUILD_DIR)
+	mill -i $(PRJ).runMain Elaborate --target-dir $(BUILD_DIR)
 
-override ARGS ?= --log=$(BUILD_DIR)/npc-log.txt $(ARGS_DIFF) 
+help:
+	mill -i $(PRJ).runMain Elaborate --help
 
-IMG ?=
-NPC_EXEC := $(BIN) $(ARGS)  $(IMG)
+reformat:
+	mill -i __.reformat
 
-NEMU_FILE := $(shell find $(abspath ../nemu/src) -name "*.c")
-$(DIFF_REF_SO): $(NEMU_FILE)
-	@$(MAKE) -s -C $(DIFF_REF_PATH) $(REFFLAGS)
-$(BIN): $(VSRCS) $(CSRCS) $(DIFF_REF_SO)
-	@rm -rf $(OBJ_DIR)
-	@$(VERILATOR) $(VERILATOR_CFLAGS) \
-		--top-module $(TOPNAME) $(VSRCS) $(CSRCS) \
-		$(addprefix -CFLAGS , $(CFLAGS)) $(addprefix -LDFLAGS , $(LDFLAGS)) \
-		--Mdir $(OBJ_DIR) --exe -o $(abspath $(BIN))
+checkformat:
+	mill -i __.checkFormat
 
-all: default
+bsp:
+	mill -i mill.bsp.BSP/install
 
-run: $(BIN)
-	@$(call git_commit, "sim RTL") # DO NOT REMOVE THIS LINE!!!
-	@$(NPC_EXEC)
-
+idea:
+	mill -i mill.idea.GenIdea/idea
 
 clean:
-	rm -rf $(BUILD_DIR)
-	rm -f wave.vcd
+	-rm -rf $(BUILD_DIR)
 
-.PHONY: default all clean run
+.PHONY: test verilog help reformat checkformat clean
 
-include ../Makefile
+sim:
+	$(call git_commit, "sim RTL") # DO NOT REMOVE THIS LINE!!!
+	@echo "Write this Makefile by yourself."
+
+-include ../Makefile
