--- a/npc/Makefile
+++ b/npc/Makefile
@@ -53,6 +53,7 @@ test:
 	mill -i $(PRJ).test
 
 verilog:
+	@$(call git_commit, "generate verilog") 
 	mkdir -p $(BUILD_DIR)
 	mill -i $(PRJ).runMain Elaborate
 
